--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.4",
+    "bcrypt": ">=5.0.0",
     "box-node-sdk": "^1.27.0",
     "dataloader": "^1.4.0",
     "dotenv": "^6.2.0",
